# sorting

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: sortingConfig.cmake.in
include/sorting/: Sorting.h
tests/: MainTest.cpp  SortingTest.cpp
